# notion-prd-review-public

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: notion-auto-format.yml
src/notion_formatter/: __init__.py  ai_client.py  cli.py  config.py  markdown_converter.py  notion_service.py  prompt_builder.py  runner.py
templates/: notion_requirement_template.md  notion_review_checklist.md
